colocando CSS em prática

--- a/primeira_pagina.html
+++ b/primeira_pagina.html
@@ -8,7 +8,9 @@
     <title>Star Wars</title>
 </head>
 
-<body style="background-color: chocolate;">
+<link rel="stylesheet" href="estilo.css">
+
+<body class="fundo_chocolate">
 
     <div>
         <!-- cabeçalho começa aqui -->
