Finalização de CSS

--- a/index.html
+++ b/index.html
@@ -1,27 +1,70 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JeTech</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <header>
-        <div class="container">
-            <div class="titulo">
-                <h1>JeTech</h1>
-            </div>
+<html lang="pt-BR">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Acquatec</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  </head>
+  <body>
 
-            <div class="navegacao">
-                <ul>
-                    <li>Nossos Serviços</li>
-                    <li>Sobre nós</li>
-                    <li>Login</li>
-                </ul>
-            </div>
+    <header>
+      <div class="container">
+        <div class="titulo">
+          <h1>Acquatec</h1>
         </div>
+
+        <div class="navegacao">
+          <ul>
+            <li class="agora">Inicial</li>
+            <li>Simulador</li>
+            <li>|</li>
+            <li>Login</li>
+            <li>Cadastro</li>
+          </ul>
+        </div>
+      </div>
     </header>
-</body>
-</html>
+    
+    <main>
+      <div class="banner">
+        <div class="container">
+          <p>Preservando <b>hoje</b> para existirem <b>amanhã</b>.</p>
+        </div>
+      </div>
+
+      <div class="social">
+        <div class="container">
+          <div class="caixas">
+            <div class="caixa">
+              <img src="./assets/img/planet-earth_color.png" alt="Icone da missão da Acquatec">
+              <h4>Missão</h4>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+            </div>
+            <div class="caixa">
+              <img src="./assets/img/lightbulb_color.png" alt="Icone da visão da Acquatec">
+              <h4>Visão</h4>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+            </div>
+            <div class="caixa">
+              <img src="./assets/img/growth_color.png" alt="Icone dos valores da Acquatec">
+              <h4>Valores</h4>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+    <!-- RODAPÉ/FOOTER -->
+    <footer>
+      <div class="container">
+        <p>Feito com amor por um aluno &hearts; SPTech &copy; 2022</p>
+      </div>
+    </footer>
+
+  </body>
+  </html>
+  
