--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Acquatec</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="estilo-gerais.css">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   </head>
   <body>
 
+    <!-- HEADER -->
     <header>
       <div class="container">
         <div class="titulo">
@@ -19,11 +21,11 @@
 
         <div class="navegacao">
           <ul>
-            <li class="agora">Inicial</li>
-            <li>Simulador</li>
+            <li><a href="#">Inicial</a></li>
+            <li><a href="#">Simulador</a></li>
             <li>|</li>
-            <li>Login</li>
-            <li>Cadastro</li>
+            <li class="agora"><a href="login.html">Login</a></li>
+            <li><a href="#">Cadastro</a></li>
           </ul>
         </div>
       </div>
@@ -58,6 +60,7 @@
         </div>
       </div>
     </main>
+    
     <!-- RODAPÉ/FOOTER -->
     <footer>
       <div class="container">
