Tela de cadastro feita!

--- a/cadastro.html
+++ b/cadastro.html
@@ -35,7 +35,7 @@
         <section class="banner">
             <div class="container">
                 <div class="caixa-formulario">
-                    <h2>Olá de volta!</h2>
+                    <h2>Bem-vindo!</h2>
                     <div class="campo">
                         <label for="nome">Nome:</label>
                         <input type="text" name="nome" id="nome" placeholder="Seu Nome">
