Arrumei a cor da navegação!

--- a/login.html
+++ b/login.html
@@ -25,7 +25,7 @@
                     <li><a href="#">Simulador</a></li>
                     <li>|</li>
                     <li class="agora"><a href="login.html">Login</a></li>
-                    <li><a href="#">Cadastro</a></li>
+                    <li class="cadastro"><a href="cadastro.html">Cadastro</a></li>
                 </ul>
             </div>
         </div>
